@@ -2,6 +2,8 @@ caputils-0.7.4
 --------------
 
   * Integrating libmarc into caputils.
+  * Adding function to add multiple ethernet multicast memberships to a single stream
+  * typedef struct stream stream_t
 
 caputils-0.7.3
 --------------
